# legged-gym

./: .gitignore  on_policy_runner.py  on_policy_runner_mod.py
examples/: svan_terrain_design.py
legged_gym/envs/: __init__.py
legged_gym/envs/a1/: a1_config.py
legged_gym/envs/base/: legged_robot.py  legged_robot_config.py  svan_utils.py
legged_gym/envs/base/rewards/: corl_rewards.py
legged_gym/envs/m2/: m2_flat_config.py
legged_gym/envs/svan_m1_flat/: svan_m1_flat_config.py
legged_gym/envs/svan_m2_flat/: svan_m2_flat_config.py
legged_gym/scripts/: CMakeLists.txt  mcp.py  play.py  play_wtw.py  sin_test_shm.py  topic_publish.py
legged_gym/scripts/test/: CMakeLists.txt
legged_gym/scripts/test/src/: inverse_kinematics.cpp
legged_gym/utils/: helpers.py  svan_terrain.py  task_registry.py  terrain.py
resources/robots/m2/urdf/: SVANM2_URDF.urdf  SVANM2_URDF_inertia_change.urdf
resources/robots/svan_m1/urdf/: svan_urdf_package.urdf
test2/: __init__.py  env_list.py  helpers.py  on_policy_runner.py  play.py  task_registry.py
test2/envs/: __init__.py
